[gd_scene load_steps=6 format=2]

[ext_resource path="res://Minecraft/Dirt.PNG" type="Texture" id=1]
[ext_resource path="res://Block.gd" type="Script" id=2]

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;
uniform bool mouse_entered;
void fragment() 
{
	//texture 复制图片本身的颜色通道属性
	vec4 self = texture(TEXTURE,UV);
	vec3 red = vec3(0.0,1.0,1.0);
	if(mouse_entered)
	{
		COLOR.rgb = self.rgb - red;
	}
	else
	{
		COLOR= self;
	}
}
"

[sub_resource type="ShaderMaterial" id=4]
resource_local_to_scene = true
shader = SubResource( 3 )
shader_param/mouse_entered = false

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 40 )

[node name="Block" type="StaticBody2D"]
input_pickable = true
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 4 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
emission_shape = 1
emission_sphere_radius = 59.9

[connection signal="input_event" from="." to="." method="_on_StaticBody2D_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_StaticBody2D_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Block_mouse_exited"]
